Bug 66617 - When tabbing between links on a page, the focus outline on the previously focused link would not be redrawn if the tab caused the page to scroll.  r=valeski, saari, sr=hyatt.